# template-rs

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md
template/: .gitignore  Cargo.toml  README.md  cargo-generate.toml
template/src/: batch_reader.rs  connection.rs  database.rs  driver.rs  error.rs  lib.rs  statement.rs
